# superrealty

./: .env.example  DEPLOY.md  README.md  docker-compose.yml
.github/workflows/: deploy.yml  lint.yml  test.yml
agent/: CLAUDE.md  Dockerfile  main.py  pyproject.toml
agent/src/: agent.py
agent/src/agents/: agent_realty.py  base_agent.py  call_context.py  concierge_agent.py  listing_filters.py  property_agent.py  scheduling_agent.py
agent/src/core/: config.py
agent/src/prompts/: instructions.py
agent/src/runtime/: observers.py
agent/src/services/: __init__.py  api_client.py
agent/src/utils/: room.py
agent/tests/: conftest.py
agent/tests/unit/: test_agent_boot.py  test_agent_realty.py  test_api_client.py  test_call_context.py  test_concierge_agent.py  test_instructions.py  test_listing_filters.py  test_property_agent.py  test_room.py  test_scheduling_agent.py
backend/: .env.example  pyproject.toml  railway.json
backend/migrations/versions/: b5f3a9c21e07_add_tenancy.py  c4e1a7b93f20_add_staged_onboards.py  d2f8a4c15e91_add_tenant_sms_to.py
backend/scripts/: verify_tenant_isolation.py
backend/src/api/: routes.py
backend/src/api/endpoints/: availability.py  bookings.py  buyers.py  calls.py  embed.py  graph.py  listings.py  matches.py  onboard.py  openorca.py  pipeline.py  realtor.py  recall.py  settings.py  token.py
backend/src/core/: clerk.py  config.py  events.py  exception_handlers.py  graph_token.py  tenant.py  widget_guard.py
backend/src/memory/: graph_service.py  models.py  store.py
backend/src/models/: __init__.py  booking_model.py  call_log_model.py  staged_onboard_model.py  tenant_model.py
backend/src/repository/: booking_repository.py  call_log_repository.py  tenant_repository.py
backend/src/runtime/: live_agents.py  openorca_mapper.py
backend/src/schemas/: availability_schemas.py  buyer_schemas.py  call_schemas.py  listing_schemas.py  match_schemas.py  recall_schemas.py  settings_schemas.py
backend/src/scripts/: seed_demo.py
backend/src/services/: booking_service.py  cal_service.py  extraction_service.py  fetch_service.py  ingest_service.py  llm_service.py  matching_service.py  onboard_service.py  sms_service.py
backend/src/telemetry/: __init__.py  voicegateway.py
backend/tests/: conftest.py
backend/tests/fixtures/: jsonld.html  listings.csv  nostructure.html  opengraph.html  plain.html
backend/tests/integration/: test_agent_state_sse.py  test_bookings.py  test_buyers.py  test_calls.py  test_matches.py  test_onboard_confirm.py  test_recall.py
backend/tests/unit/: test_availability_endpoint.py  test_buyers_endpoint.py  test_cal_service.py  test_calls_endpoint.py  test_embed_endpoint.py  test_exception_handlers.py  test_extraction.py  test_fetch_service.py  test_graph_endpoint.py  test_graph_service.py  test_graph_token.py  test_ingest_service.py  test_listings_matches.py  test_live_agents.py  test_llm_service.py  test_matches_endpoint.py  test_onboard_endpoint.py  test_openorca_endpoints.py  test_openorca_mapper.py  test_pipeline_endpoint.py  test_recall_endpoint.py  test_settings_endpoint.py  test_sms_service.py  test_staging_store.py  test_store_add_single_listing.py  test_store_recall_nearby.py  test_store_reset_tenant.py  test_store_upsert_buyer.py  test_telemetry.py
frontend/: .env.example  .gitignore  package.json  pnpm-lock.yaml  vercel.json
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/components/: memory-graph.tsx
frontend/src/hooks/: use-tool-events.ts
frontend/src/lib/: agent-avatars.test.ts  agent-avatars.ts  api.test.ts  api.ts  call-data.test.ts  call-data.ts  format.ts  tool-events.ts  (+6 more)
infra/sip/: README.md  dispatch-rule.json  inbound-trunk.json
scripts/: demo_seed.py  up.sh
web/: .env.example  .gitignore  README.md  astro.config.mjs  package.json  pnpm-lock.yaml  wrangler.jsonc
web/public/: _headers  robots.txt  site.webmanifest  sitemap.xml
(+47 files in other folders)
