[project]
name = "voice-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.28.1",
  "livekit-agents[openai,turn-detector]==1.6.4",
  "livekit-plugins-deepgram>=1.6.0",
  "livekit-plugins-google>=1.6.0",
  "livekit-plugins-silero>=1.6.0",
  "pydantic-settings>=2.14.0",
  "python-dotenv>=1.2.2",
  "sentry-sdk>=2.56.0",
]

[dependency-groups]
dev = [
  "aioresponses>=0.7.0",
  "mypy>=1.19.1",
  "pre-commit>=4.5.1",
  "pytest>=9.0.2",
  "pytest-asyncio>=1.3.0",
  "pytest-cov>=7.1.0",
  "ruff>=0.15.7",
]

[tool.coverage.run]
omit = [
  "src/agent.py",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
explicit_package_bases = true

[tool.pyright]
typeCheckingMode = "off"

[tool.pytest.ini_options]
markers = [
  "integration: behavioral tests requiring OPENAI_API_KEY (run with: pytest -m integration)",
]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
  "E",
  "W",
  "F",
  "I",
  "B",
  "C4",
  "UP",
]
ignore = [
  "E501",
  "B008",
  "C901",
  "W191",
  "UP035",
  "UP042",
  "UP045",
]
