[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Mahimai Raja J", email = "hello@mahimai.dev" }]
dependencies = [
  "alembic>=1.18.4",
  "asgi-correlation-id>=5.0.0",
  "asyncpg>=0.30.0",
  "cognee[neo4j,postgres]>=1.2.2",
  "dependency-injector>=4.49.0",
  "fastapi-mcp>=0.4.0",
  "fastapi[standard]>=0.136.3",
  "greenlet>=3.0.0",
  "gunicorn>=23.0.0",
  "livekit-api>=1.1.0",
  "loguru>=0.7.3",
  "openai>=2.0",
  "pydantic-settings>=2.14.1",
  "pydantic[email]>=2.13.4",
  "pyjwt>=2.10.0",
  "pypdf>=6.14.2",
  "python-dotenv>=1.2.2",
  "selectolax>=0.4.10",
  "sentry-sdk>=2.0.0",
  "sqlmodel>=0.0.38",
  "voice-prices>=0.0.11",
]

[project.scripts]
backend = "backend:main"

[dependency-groups]
dev = [
  "httpx>=0.27.0",
  "mypy>=2.1.0",
  "pre-commit>=4.6.0",
  "pytest>=9.0.3",
  "pytest-asyncio>=1.4.0",
  "pytest-cov>=7.1.0",
  "ruff>=0.15.16",
]

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[tool.mypy]
# Check under 3.12 grammar so mypy can parse openai's numpy-referencing stubs (recent numpy
# stubs use PEP 695 `type` syntax). The app runs on 3.11 (Dockerfile) and uses no 3.12-only
# syntax; ruff (target py311) and the 3.11 test runtime are the guards for that.
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = [
  "src.repository.base_repository",
  "src.schemas.base_schema",
  "src.services.base_service",
  "src.util.schema",
  "src.core.logging_conf",
  "src.core.exception_handlers",
  "src.core.config",
  "src.models.*",
]
ignore_errors = true

[tool.pyright]
typeCheckingMode = "off"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
# Session-scoped loop so Cognee's process-wide async engine (bound to the first loop it
# runs on) survives across multiple async integration tests.
asyncio_default_test_loop_scope = "session"
asyncio_default_fixture_loop_scope = "session"
markers = [
  "integration: requires live external services (Cognee, Neo4j, pgvector, OpenAI)",
]

[tool.ruff]
target-version = "py311"
line-length = 88
# Alembic writes autogenerated revisions here; don't lint machine-generated code.
extend-exclude = ["migrations/versions"]

[tool.ruff.lint]
select = [
  "E",
  "W",
  "F",
  "I",
  "B",
  "C4",
  "UP",
]
ignore = [
  "E501",
  "B008",
  "C901",
  "W191",
]
